@@ -34,6 +34,9 @@
 #ifdef HAVE_SYS_TIME_H
 #include <sys/time.h>
 #endif
+#ifdef HAVE_NL_LANGINFO
+#include <langinfo.h>
+#endif
 #include <string.h>
 #include <stdlib.h>
 #include <time.h>
@@ -703,6 +706,10 @@ gtk_calendar_init (GtkCalendar *calendar)
   else if (strcmp (year_before, "calendar:MY") != 0)
     g_warning ("Whoever translated calendar:MY did so wrongly.\n");
 
+#if defined (HAVE_NL_LANGINFO) && defined (_NL_TIME_FIRST_WEEKDAY)
+  week_start = nl_langinfo (_NL_TIME_FIRST_WEEKDAY);
+  private_data->week_start = *((unsigned char *) week_start) % 7;
+#else
   /* Translate to calendar:week_start:0 if you want Sunday to be the
    * first day of the week to calendar:week_start:1 if you want Monday
    * to be the first day of the week, and so on.
@@ -719,6 +726,7 @@ gtk_calendar_init (GtkCalendar *calendar)
       g_warning ("Whoever translated calendar:week_start:0 did so wrongly.\n");
       private_data->week_start = 0;
     }
+#endif
 }
 
 GtkWidget*
