@@ -1,5 +1,9 @@
 2005-01-13  Matthias Clasen  <mclasen@redhat.com>
 
+	* configure.in: Check for nl_langinfo()
+	* gtk/gtkcalendar.c: (gtk_calendar_init): Use nl_langinfo() when it's
+	available to determine first day of week   (#163842, Vincent Untz)
+
 	* gtk/gtkuimanager.c (gtk_ui_manager_get_widget): Add hints about 
 	the lifecycle of widgets.  (#159503, Christian Persch)
 
